# MatrixOperation

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
benchmark/: CMakeLists.txt  benchmark_matrix.cpp  benchmark_test.cpp  benchmark_test_copy.cpp
matrix_operations/: CMakeLists.txt  main.cpp  main_copy.cpp  matrix.h  matrix.inl  matrix_copy.h  matrix_impl.h  matrix_impl_2.h  matrix_impl_copy.h  matrix_impl_copy_2.h  matrix_multi_naive.h  matrix_multi_naive_copy.h  matrix_multi_optimized _t_1.h  matrix_multi_optimized _t_1_copy.h  matrix_multi_optimized _t_n.h  matrix_multi_optimized _t_n_copy.h  matrix_old.h  matrix_util.h  solution.h  strassens_algorithm.h  thread_pool.h
test/: CMakeLists.txt  tests.cpp
